--- a/index.html
+++ b/index.html
@@ -11,46 +11,34 @@
     <title>cssBayan</title>
 </head>
 <body>
-
     <div class="container">
         <h1>CSS Bayan</h1>
         <div class="item">
             <span class="palka"></span>
-            <input class="item-input" type="checkbox"  id="item_1">
-            <label class="item-title" for="item_1">Meme 1<span class="plus"></span></label>
+            <input class="item-input" type="radio"  id="item_1">
+            <label class="item-title" for="item_1">Meme 1</label>
             <img class="meme_img1" src="images/1428956225_74105626.jpg" alt="first_meme">
         </div>
-    </div>
-    <div class="container">
         <div class="item">
             <span class="palka"></span>
-            <input class="item-input" type="checkbox"  id="item_2">
-            <label class="item-title" for="item_2">Meme 2<span class="plus"></span></label>
-            <img class="meme_img1" src="images/1678219361_shutok.ru.1678212180.jpg" alt="first_meme"></div>
-        </div>
-    </div>
-    <div class="container">
+            <input class="item-input" type="radio"  id="item_2">
+            <label class="item-title" for="item_2">Meme 2</label>
+            <img class="meme_img1" src="images/1678219361_shutok.ru.1678212180.jpg" alt="2_meme"></div>
         <div class="item">
             <span class="palka"></span>
-            <input class="item-input" type="checkbox"  id="item_3">
-            <label class="item-title" for="item_3">Meme 3<span class="plus"></span></label>
-            <img class="meme_img1" src="images/727b5cc3e6840a9c1ce89e77e4d25e1aa7628bfcr1-1300-1063v2_hq.jpg" alt="first_meme"></div>
-        </div>
-    </div>
-    <div class="container">
+            <input class="item-input" type="radio"  id="item_3">
+            <label class="item-title" for="item_3">Meme 3</label>
+            <img class="meme_img1" src="images/727b5cc3e6840a9c1ce89e77e4d25e1aa7628bfcr1-1300-1063v2_hq.jpg" alt="3_meme"></div>
         <div class="item">
             <span class="palka"></span>
-            <input class="item-input" type="checkbox"  id="item_4">
-            <label class="item-title" for="item_4">Meme 4<span class="plus"></span></label>
-            <img class="meme_img1" src="images/EITVgBjW4AMWY85.jpg" alt="first_meme"></div>
-        </div>
-    </div>
-    <div class="container">
+            <input class="item-input" type="radio"  id="item_4">
+            <label class="item-title" for="item_4">Meme 4</label>
+            <img class="meme_img1" src="images/EITVgBjW4AMWY85.jpg" alt="4_meme"></div>
         <div class="item">
             <span class="palka"></span>
-            <input class="item-input" type="checkbox" id="item_5">
-            <label class="item-title" for="item_5">Meme 5<span class="plus"></span></label>
-            <img class="meme_img1" src="images/post_5bb5cc1c3e19f.jpeg" alt="first_meme"></div>
+            <input class="item-input" type="radio" id="item_5">
+            <label class="item-title" for="item_5">Meme 5</label>
+            <img class="meme_img1" src="images/post_5bb5cc1c3e19f.jpeg" alt="5_meme"></div>
         </div>
     </div>
 </body>
