init: lastchanges (Mon, March 13, 2023 0:18 PM)

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
             <span class="palka"></span>
             <input class="item-input" type="radio"  id="item_2">
             <label class="item-title" for="item_2">Meme 2</label>
-            <img class="meme_img1" src="images/1678219361_shutok.ru.1678212180.jpg" alt="2_meme"></div>
+            <img class="meme_img1" src="images/1678219361_shutok.ru.1678212180.jpg" alt="second_meme"></div>
         <div class="item">
             <span class="palka"></span>
             <input class="item-input" type="radio"  id="item_3">
             <label class="item-title" for="item_3">Meme 3</label>
-            <img class="meme_img1" src="images/727b5cc3e6840a9c1ce89e77e4d25e1aa7628bfcr1-1300-1063v2_hq.jpg" alt="3_meme"></div>
+            <img class="meme_img1" src="images/727b5cc3e6840a9c1ce89e77e4d25e1aa7628bfcr1-1300-1063v2_hq.jpg" alt="third_meme"></div>
         <div class="item">
             <span class="palka"></span>
             <input class="item-input" type="radio"  id="item_4">
             <label class="item-title" for="item_4">Meme 4</label>
-            <img class="meme_img1" src="images/EITVgBjW4AMWY85.jpg" alt="4_meme"></div>
+            <img class="meme_img1" src="images/EITVgBjW4AMWY85.jpg" alt="fourth_meme"></div>
         <div class="item">
             <span class="palka"></span>
             <input class="item-input" type="radio" id="item_5">
             <label class="item-title" for="item_5">Meme 5</label>
-            <img class="meme_img1" src="images/post_5bb5cc1c3e19f.jpeg" alt="5_meme"></div>
+            <img class="meme_img1" src="images/post_5bb5cc1c3e19f.jpeg" alt="fifth_meme"></div>
         </div>
     </div>
 </body>
